--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -8,3 +8,10 @@ $THEME_SUNSET_2: #f9a392;
 $THEME_SUNSET_3: #fdd89d;
 
 $WHITE: #ffffff;
+
+$LIGHT: #fff9e0;
+$LIGHT30: rgba($LIGHT, 30%);
+$LIGHT50: rgba($LIGHT, 50%);
+$DARK: #402b23;
+$DARK30: rgba($DARK, 30%);
+$DARK50: rgba($DARK, 50%);
