--- a/src/styles/constants/_sizes.scss
+++ b/src/styles/constants/_sizes.scss
@@ -1,5 +1,7 @@
 $LAYOUT_PADDING: 16px;
+$LAYOUT_BORDER_RADIUS: 24px;
 $LAYOUT_IMAGE_SIZE: 100px;
 
 /* font-sizes */
 $FONT_TITLE: 32px;
+$FONT_SUBTITLE: 20px;
