--- a/src/components/Layout/NavSection/navSection.module.scss
+++ b/src/components/Layout/NavSection/navSection.module.scss
@@ -5,7 +5,7 @@
 
 .layoutNavBar {
   width: 100%;
-  margin-bottom: 16px;
+  margin: 20px 0;
 
   & > ul {
     @include flexbox.flexbox(center, center);
