--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -12,6 +12,8 @@ $WHITE: #ffffff;
 $LIGHT: #fff9e0;
 $LIGHT30: rgba($LIGHT, 30%);
 $LIGHT50: rgba($LIGHT, 50%);
+$MIDDLE: #f6b94f;
+$MIDDLE50: rgba($MIDDLE, 50%);
 $DARK: #402b23;
 $DARK30: rgba($DARK, 30%);
 $DARK50: rgba($DARK, 50%);
