Design: 폰트 추가, 내비게이션 섹션 폰트 크기 조정

--- a/src/components/Layout/NavSection/navSection.module.scss
+++ b/src/components/Layout/NavSection/navSection.module.scss
@@ -18,6 +18,9 @@
   margin-right: 16px;
 
   a {
+    font-family: 'Nanum Myeongjo', serif;
+    font-size: sizes.$FONT_SUBTITLE;
+    font-weight: 700;
     color: colors.$DARK30;
     transition: color 0.2s ease-in;
 
