Design: 내비게이션 바 스크롤 흔들흔들거리는거 수정

--- a/src/components/Layout/NavSection/navSection.module.scss
+++ b/src/components/Layout/NavSection/navSection.module.scss
@@ -8,9 +8,11 @@
   margin: 20px 0;
 
   & > ul {
-    @include flexbox.flexbox(center, center);
+    @include flexbox.flexbox(center, start);
     width: 100%;
-    overflow: auto;
+    height: sizes.$FONT_SUBTITLE;
+    overflow-x: auto;
+    overflow-y: hidden;
   }
 }
 
