--- a/src/components/PlayerComponent/playerComponent.module.scss
+++ b/src/components/PlayerComponent/playerComponent.module.scss
@@ -4,12 +4,14 @@
 @use 'styles/mixins/flexbox';
 
 .playerComponentWrapper {
+  width: 100%;
   height: 100%;
   font-family: 'Nanum Myeongjo', serif;
   color: colors.$DARK;
 }
 
 .playerInformation {
+  width: 100%;
   height: calc(60% - 16px);
   padding: 0 8px;
   margin-top: 16px;
@@ -24,16 +26,25 @@
   .playerSongInfo {
     @include flexbox.flexbox(start, center);
     flex-direction: row;
+    width: 100%;
     margin-bottom: 16px;
 
     dt {
+      max-width: calc(60% - 16px);
       margin-right: 16px;
+      overflow: hidden;
       font-size: sizes.$FONT_SUBTITLE;
       font-weight: 700;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
 
     dd {
+      max-width: 40%;
+      overflow: hidden;
       color: colors.$DARK50;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 
