Design: 태그 잘리거나 눌리지 않게 스크롤 + flex wrap

--- a/src/components/PlayerComponent/TagBox/tagBox.module.scss
+++ b/src/components/PlayerComponent/TagBox/tagBox.module.scss
@@ -2,11 +2,12 @@
 
 .tagBoxWrapper {
   @include flexbox.flexbox(start, center);
-  flex-direction: row;
+  flex-flow: wrap;
   width: 100%;
   overflow: auto;
 
   li {
     margin-right: 8px;
+    margin-bottom: 4px;
   }
 }
