--- a/src/components/Tag/tag.module.scss
+++ b/src/components/Tag/tag.module.scss
@@ -6,6 +6,7 @@
   padding: 4px 12px;
   font-family: 'Nanum Myeongjo', serif;
   color: colors.$DARK;
+  white-space: nowrap;
   background-color: colors.$MIDDLE50;
   border-radius: 10px;
 }
