--- a/src/components/PlayerComponent/playerComponent.module.scss
+++ b/src/components/PlayerComponent/playerComponent.module.scss
@@ -55,6 +55,7 @@
     padding: 12px 16px;
     margin-bottom: 16px;
     overflow: auto;
+    line-height: 20px;
     white-space: pre-wrap;
     border: 1px solid colors.$DARK30;
     border-radius: 4px;
