--- a/src/components/PlayerComponent/playerComponent.module.scss
+++ b/src/components/PlayerComponent/playerComponent.module.scss
@@ -67,7 +67,7 @@
   position: absolute;
   top: 25px;
   left: 0;
-  width: 50vw;
+  max-width: 50vw;
   padding: 2px 5px;
   color: colors.$DARK50;
   background-color: colors.$WHITE;
