Design: 반응형, 컨테이너 높이 늘었다 줄었다 하는 것 수정

--- a/src/components/Layout/layout.module.scss
+++ b/src/components/Layout/layout.module.scss
@@ -26,7 +26,7 @@
 
 .layoutContainer {
   width: 100%;
-  height: calc(100% - sizes.$LAYOUT_IMAGE_SIZE / 2);
+  height: calc(100% - sizes.$LAYOUT_IMAGE_SIZE);
   padding: sizes.$LAYOUT_PADDING;
   background-color: colors.$WHITE;
   border-radius: sizes.$LAYOUT_BORDER_RADIUS;
