--- a/src/components/PlayerComponent/playerComponent.module.scss
+++ b/src/components/PlayerComponent/playerComponent.module.scss
@@ -33,6 +33,10 @@
     border: 1px solid colors.$DARK30;
     border-radius: 4px;
   }
+
+  .playerSongInfo {
+    margin-bottom: 16px;
+  }
 }
 
 .tooltip {
