--- a/src/router/Mood/FilteredSongList/filteredSongList.module.scss
+++ b/src/router/Mood/FilteredSongList/filteredSongList.module.scss
@@ -3,39 +3,27 @@
 @use 'styles/mixins/flexbox';
 
 .filteredSongListWrapper {
-  height: calc(100% - 24vh - 32px - 48px);
-  min-height: 12vh;
-  overflow-y: auto;
+  @include flexbox.flexbox(start, start);
+  flex-direction: column;
+  width: 100%;
+  height: calc(100% - 20vh - 32px - 48px);
+  overflow: auto;
   border: 1px solid colors.$DARK50;
   border-radius: 4px;
 }
 
 .filteredSongElement {
-  .currentSongInfo {
-    @include flexbox.flexbox(start, center);
-    position: relative;
-    flex-direction: row;
-    width: 100%;
-    margin-bottom: 16px;
+  width: 100%;
+  padding: 12px 16px;
+  border-bottom: 1px solid colors.$DARK30;
 
+  &:last-child {
+    border-bottom: none;
+  }
+
+  .filteredSongInfo {
     dt {
-      max-width: calc(60% - 16px);
-      margin-right: 16px;
-      overflow: hidden;
-      font-size: sizes.$FONT_SUBTITLE;
-      font-weight: 700;
-      line-height: sizes.$FONT_SUBTITLE;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
-
-    dd {
-      max-width: 40%;
-      overflow: hidden;
-      line-height: sizes.$FONT_SUBTITLE;
-      color: colors.$DARK50;
-      text-overflow: ellipsis;
-      white-space: nowrap;
+      font-size: initial;
     }
   }
 }
