--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -15,5 +15,6 @@ $LIGHT50: rgba($LIGHT, 50%);
 $MIDDLE: #f6b94f;
 $MIDDLE50: rgba($MIDDLE, 50%);
 $DARK: #402b23;
+$DARK10: rgba($DARK, 10%);
 $DARK30: rgba($DARK, 30%);
 $DARK50: rgba($DARK, 50%);
