--- a/src/router/Calendar/OverviewCalendar/CalendarBody/calendarBody.module.scss
+++ b/src/router/Calendar/OverviewCalendar/CalendarBody/calendarBody.module.scss
@@ -16,7 +16,8 @@
 }
 
 .dateWrapper {
-  @include flexbox.flexbox(start, start);
+  @include flexbox.flexbox(between, start);
+  display: block;
   width: 100%;
   height: 100%;
   padding: 5px;
@@ -26,23 +27,19 @@
   user-select: none;
   transition: background-color 0.2s;
 
-  .songAvailable {
-    width: 16px;
-    height: 16px;
-    margin-left: 10px;
-    background-color: colors.$MIDDLE;
-    border-radius: 8px;
+  &.songAvailable {
+    background-color: colors.$MIDDLE30;
+
+    &:hover {
+      background-color: colors.$MIDDLE50;
+    }
   }
 
   &.otherMonthDate {
     color: colors.$DARK30;
 
-    .songAvailable {
-      background-color: colors.$MIDDLE50;
+    &.songAvailable {
+      background-color: colors.$MIDDLE10;
     }
-  }
-
-  &:hover {
-    background-color: colors.$DARK10;
   }
 }
