--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -13,6 +13,8 @@ $LIGHT: #fff9e0;
 $LIGHT30: rgba($LIGHT, 30%);
 $LIGHT50: rgba($LIGHT, 50%);
 $MIDDLE: #f6b94f;
+$MIDDLE10: rgba($MIDDLE, 10%);
+$MIDDLE30: rgba($MIDDLE, 30%);
 $MIDDLE50: rgba($MIDDLE, 50%);
 $DARK: #402b23;
 $DARK10: rgba($DARK, 10%);
