Feat: play 페이지에서 뒤로가기 버튼

--- a/src/components/Layout/NavSection/navSection.module.scss
+++ b/src/components/Layout/NavSection/navSection.module.scss
@@ -14,6 +14,24 @@
     overflow-x: auto;
     overflow-y: hidden;
   }
+
+  &.isPlayPage {
+    position: relative;
+  }
+
+  .goBackButton {
+    position: absolute;
+    font-family: 'Nanum Myeongjo', serif;
+    font-size: sizes.$FONT_SUBTITLE;
+    font-weight: 700;
+    line-height: sizes.$FONT_SUBTITLE;
+    color: colors.$DARK30;
+    transition: color 0.2s ease-in;
+
+    &:hover {
+      color: colors.$DARK50;
+    }
+  }
 }
 
 .layoutNavElement {
