Feat: 추천곡일 경우 우하단에 추천인명 출력

--- a/src/components/PlayerComponent/playerComponent.module.scss
+++ b/src/components/PlayerComponent/playerComponent.module.scss
@@ -38,3 +38,19 @@
     margin-bottom: 16px;
   }
 }
+
+.recommended {
+  @include flexbox.flexbox(end, center);
+  width: 100%;
+  margin: 10px 0;
+  color: colors.$DARK30;
+  user-select: none;
+
+  .recommendedName {
+    color: colors.$DARK50;
+  }
+
+  .recommendedStr {
+    font-size: sizes.$FONT_SMALL;
+  }
+}
