Design: 캘린더 < > 버튼 너비 설정

--- a/src/router/Calendar/OverviewCalendar/CalendarHeader/calendarHeader.module.scss
+++ b/src/router/Calendar/OverviewCalendar/CalendarHeader/calendarHeader.module.scss
@@ -13,6 +13,10 @@
     color: colors.$DARK;
   }
 
+  .calendarHeaderButton {
+    width: 30px;
+  }
+
   .calendarHeaderTitleButton {
     width: 150px;
     min-width: 120px;
