--- a/src/components/Tooltip/tooltip.module.scss
+++ b/src/components/Tooltip/tooltip.module.scss
@@ -5,7 +5,7 @@
   position: absolute;
   z-index: levels.$TOOLTIP;
   display: none;
-  width: 50vw;
+  width: 100%;
   filter: drop-shadow(0 0 1px colors.$DARK50);
 
   .tooltipContainer {
