Feat: 오늘 날짜 캘린더에 표시

--- a/src/router/Calendar/OverviewCalendar/CalendarBody/calendarBody.module.scss
+++ b/src/router/Calendar/OverviewCalendar/CalendarBody/calendarBody.module.scss
@@ -42,4 +42,11 @@
       background-color: colors.$MIDDLE10;
     }
   }
+
+  .today {
+    padding: 5px;
+    margin: 10px 0;
+    text-align: center;
+    background-color: colors.$MIDDLE30;
+  }
 }
