Design: 다른 달의 날짜 호버링 시 색상변경

--- a/src/router/Calendar/OverviewCalendar/CalendarBody/calendarBody.module.scss
+++ b/src/router/Calendar/OverviewCalendar/CalendarBody/calendarBody.module.scss
@@ -40,6 +40,10 @@
 
     &.songAvailable {
       background-color: colors.$MIDDLE10;
+
+      &:hover {
+        background-color: colors.$MIDDLE30;
+      }
     }
   }
 
