--- a/src/components/PlayerComponent/playerComponent.module.scss
+++ b/src/components/PlayerComponent/playerComponent.module.scss
@@ -35,7 +35,12 @@
   }
 
   .playerSongInfo {
+    @include flexbox.flexbox(start, center);
     margin-bottom: 16px;
+
+    dt {
+      line-height: 24px;
+    }
   }
 }
 
