Design: 아티스트명 글자 크기 줄임

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -21,7 +21,7 @@
     overflow: hidden;
     font-size: sizes.$FONT_SUBTITLE;
     font-weight: 700;
-    line-height: sizes.$FONT_SUBTITLE;
+    line-height: 24px;
     color: colors.$DARK;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -30,7 +30,7 @@
   dd {
     max-width: 40%;
     overflow: hidden;
-    line-height: sizes.$FONT_SUBTITLE;
+    font-size: sizes.$FONT_SMALL;
     color: colors.$DARK50;
     text-overflow: ellipsis;
     white-space: nowrap;
