--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -3,9 +3,17 @@ $THEME_SUNRISE_1: #f7cd6b;
 $THEME_SUNRISE_2: #ea8d57;
 $THEME_SUNRISE_3: #140905;
 
-$THEME_SUNSET_1: #6479ae;
-$THEME_SUNSET_2: #f9a392;
-$THEME_SUNSET_3: #fdd89d;
+$THEME_DAYLIGHT_1: #278fd0;
+$THEME_DAYLIGHT_2: #6aaed9;
+$THEME_DAYLIGHT_3: #d3e9f1;
+
+$THEME_SUNSET_1: #333170;
+$THEME_SUNSET_2: #b44a7b;
+$THEME_SUNSET_3: #f79e7e;
+
+$THEME_NIGHT_1: #141a26;
+$THEME_NIGHT_2: #2e3d59;
+$THEME_NIGHT_3: #607ea6;
 
 $WHITE: #ffffff;
 
