Design: 컬러테마 설정 완료 (잘바뀜)

--- a/src/components/Layout/HoverButton/hoverButton.module.scss
+++ b/src/components/Layout/HoverButton/hoverButton.module.scss
@@ -12,7 +12,7 @@
   overflow: hidden;
   background-color: colors.$WHITE;
   border-radius: 35px;
-  box-shadow: 0 0 16px 4px colors.$LIGHT30;
+  box-shadow: 0 0 16px 4px var(--color-light30);
 
   svg {
     width: 30px;
