--- a/src/components/Layout/NavSection/navSection.module.scss
+++ b/src/components/Layout/NavSection/navSection.module.scss
@@ -1,4 +1,3 @@
-@use 'styles/constants/colors';
 @use 'styles/constants/levels';
 @use 'styles/constants/sizes';
 @use 'styles/mixins/flexbox';
@@ -25,11 +24,11 @@
     font-size: sizes.$FONT_SUBTITLE;
     font-weight: 700;
     line-height: sizes.$FONT_SUBTITLE;
-    color: colors.$DARK30;
+    color: var(--color-dark30);
     transition: color 0.2s ease-in;
 
     &:hover {
-      color: colors.$DARK50;
+      color: var(--color-dark50);
     }
   }
 }
@@ -41,15 +40,15 @@
     font-family: 'Nanum Myeongjo', serif;
     font-size: sizes.$FONT_SUBTITLE;
     font-weight: 700;
-    color: colors.$DARK30;
+    color: var(--color-dark30);
     transition: color 0.2s ease-in;
 
     &:hover {
-      color: colors.$DARK50;
+      color: var(--color-dark50);
     }
 
     &.isActive {
-      color: colors.$DARK;
+      color: var(--color-dark);
     }
   }
 
