--- a/src/router/Calendar/OverviewCalendar/CalendarBody/calendarBody.module.scss
+++ b/src/router/Calendar/OverviewCalendar/CalendarBody/calendarBody.module.scss
@@ -1,4 +1,3 @@
-@use 'styles/constants/colors';
 @use 'styles/constants/sizes';
 @use 'styles/mixins/flexbox';
 
@@ -23,26 +22,26 @@
   padding: 5px;
   font-size: sizes.$FONT_NORMAL;
   line-height: sizes.$FONT_NORMAL;
-  color: colors.$DARK;
+  color: var(--color-dark);
   user-select: none;
   transition: background-color 0.2s;
 
   &.songAvailable {
-    background-color: colors.$MIDDLE30;
+    background-color: var(--color-middle30);
 
     &:hover {
-      background-color: colors.$MIDDLE50;
+      background-color: var(--color-middle50);
     }
   }
 
   &.otherMonthDate {
-    color: colors.$DARK30;
+    color: var(--color-dark30);
 
     &.songAvailable {
-      background-color: colors.$MIDDLE10;
+      background-color: var(--color-middle10);
 
       &:hover {
-        background-color: colors.$MIDDLE30;
+        background-color: var(--color-middle30);
       }
     }
   }
@@ -51,6 +50,6 @@
     padding: 5px;
     margin: 10px 0;
     text-align: center;
-    background-color: colors.$MIDDLE30;
+    background-color: var(--color-middle30);
   }
 }
