--- a/src/router/Calendar/OverviewCalendar/CalendarSelectMonth/calendarSelectMonth.module.scss
+++ b/src/router/Calendar/OverviewCalendar/CalendarSelectMonth/calendarSelectMonth.module.scss
@@ -1,5 +1,3 @@
-@use 'styles/constants/colors';
-
 .selectMonthWrapper {
   display: grid;
   grid-template-rows: repeat(3, 1fr);
@@ -11,10 +9,10 @@
   transition: background-color 0.2s;
 
   &:hover {
-    background-color: colors.$DARK10;
+    background-color: var(--color-dark10);
   }
 
   &.isSelectedMonth {
-    border: 4px solid colors.$MIDDLE50;
+    border: 4px solid var(--color-middle50);
   }
 }
