--- a/src/router/Mood/FilteredSongList/filteredSongList.module.scss
+++ b/src/router/Mood/FilteredSongList/filteredSongList.module.scss
@@ -1,4 +1,3 @@
-@use 'styles/constants/colors';
 @use 'styles/constants/sizes';
 @use 'styles/mixins/flexbox';
 
@@ -8,14 +7,14 @@
   width: 100%;
   height: calc(100% - 20vh - 32px - 48px);
   overflow: auto;
-  border: 1px solid colors.$DARK50;
+  border: 1px solid var(--color-dark50);
   border-radius: 4px;
 }
 
 .filteredSongElement {
   width: 100%;
   padding: 12px 16px;
-  border-bottom: 1px solid colors.$DARK30;
+  border-bottom: 1px solid var(--color-dark30);
 
   &:last-child {
     border-bottom: none;
