--- a/src/components/Layout/layout.module.scss
+++ b/src/components/Layout/layout.module.scss
@@ -8,24 +8,27 @@
   position: relative;
   width: 100vw;
   height: 100vh;
-  background: linear-gradient(colors.$THEME_SUNRISE_1, colors.$THEME_SUNRISE_2 25%, colors.$THEME_SUNRISE_3);
-  transition: background 0.2s;
+
+  :root[color-theme='theme-sunrise'] & {
+    background: linear-gradient(var(--color-theme1), var(--color-theme2) 25%, var(--color-theme3));
+  }
 
   :root[color-theme='theme-daylight'] & {
-    background: linear-gradient(colors.$THEME_DAYLIGHT_1, colors.$THEME_DAYLIGHT_2 50%, colors.$THEME_DAYLIGHT_3);
+    background: linear-gradient(var(--color-theme1), var(--color-theme2) 25%, var(--color-theme3));
   }
 
   :root[color-theme='theme-sunset'] & {
-    background: linear-gradient(colors.$THEME_SUNSET_1, colors.$THEME_SUNSET_2 75%, colors.$THEME_SUNSET_3);
+    background: linear-gradient(var(--color-theme1), var(--color-theme2) 75%, var(--color-theme3));
   }
 
   :root[color-theme='theme-night'] & {
-    background: linear-gradient(colors.$THEME_NIGHT_1, colors.$THEME_NIGHT_2 75%, colors.$THEME_NIGHT_3);
+    background: linear-gradient(var(--color-theme1), var(--color-theme2) 75%, var(--color-theme3));
   }
 }
 
 .layoutWrapper {
   @include flexbox.flexbox(center, center);
+  z-index: levels.$LAYOUT;
   flex-direction: column;
   width: 80%;
   max-width: 480px;
