--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -1,18 +1,81 @@
-/* main background colors */
-$THEME_SUNRISE_1: #f7cd6b;
-$THEME_SUNRISE_2: #ea8d57;
-$THEME_SUNRISE_3: #140905;
-
-$THEME_DAYLIGHT_1: #278fd0;
-$THEME_DAYLIGHT_2: #6aaed9;
-$THEME_DAYLIGHT_3: #d3e9f1;
-
-$THEME_SUNSET_1: #333170;
-$THEME_SUNSET_2: #b44a7b;
-$THEME_SUNSET_3: #f79e7e;
-
-$THEME_NIGHT_1: #141a26;
-$THEME_NIGHT_2: #2e3d59;
-$THEME_NIGHT_3: #607ea6;
-
 $WHITE: #ffffff;
+
+// opacity 10%: 0x1A
+// opacity 30%: 0x4E
+// opacity 50%: 0x82
+
+:root[color-theme='theme-sunrise'] {
+  --container-background-color: #ffffff;
+  --color-theme1: #f7cd6b;
+  --color-theme2: #ea8d57;
+  --color-theme3: #140905;
+
+  --color-light: #fff9e0;
+  --color-light30: #fff9e04e;
+  --color-light50: #fff9e082;
+  --color-middle: #f6b94f;
+  --color-middle10: #f6b94f1a;
+  --color-middle30: #f6b94f4e;
+  --color-middle50: #f6b94f82;
+  --color-dark: #402b23;
+  --color-dark10: #402b231a;
+  --color-dark30: #402b2366;
+  --color-dark50: #402b2382;
+}
+
+:root[color-theme='theme-daylight'] {
+  --container-background-color: #ffffff;
+  --color-theme1: #278fd0;
+  --color-theme2: #6aaed9;
+  --color-theme3: #d3e9f1;
+
+  --color-light: #b0cddf;
+  --color-light30: #b0cddf4e;
+  --color-light50: #b0cddf82;
+  --color-middle: #619fda;
+  --color-middle10: #619fda1a;
+  --color-middle30: #619fda4e;
+  --color-middle50: #619fda82;
+  --color-dark: #274159;
+  --color-dark10: #2741591a;
+  --color-dark30: #27415966;
+  --color-dark50: #27415982;
+}
+
+:root[color-theme='theme-sunset'] {
+  --container-background-color: #242b45;
+  --color-theme1: #455384;
+  --color-theme2: #a65d7f;
+  --color-theme3: #f79e7e;
+
+  --color-light: #38436b;
+  --color-light30: #38436b4e;
+  --color-light50: #38436b82;
+  --color-middle: #cc749d;
+  --color-middle10: #cc749d1a;
+  --color-middle30: #cc749d4e;
+  --color-middle50: #cc749d82;
+  --color-dark: #c8c5d8;
+  --color-dark10: #c8c5d81a;
+  --color-dark30: #c8c5d84e;
+  --color-dark50: #c8c5d882;
+}
+
+:root[color-theme='theme-night'] {
+  --container-background-color: #393a3d;
+  --color-theme1: #141a26;
+  --color-theme2: #2e3d59;
+  --color-theme3: #607ea6;
+
+  --color-light: #5b5a69;
+  --color-light30: #5b5a694e;
+  --color-light50: #5b5a6982;
+  --color-middle: #6c80a2;
+  --color-middle10: #6c80a21a;
+  --color-middle30: #6c80a24e;
+  --color-middle50: #6c80a282;
+  --color-dark: #dae4f8;
+  --color-dark10: #dae4f81a;
+  --color-dark30: #dae4f84e;
+  --color-dark50: #dae4f882;
+}
