Design: 레이아웃 배경색 조정

--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -5,7 +5,7 @@ $WHITE: #ffffff;
 // opacity 50%: 0x82
 
 :root[color-theme='theme-sunrise'] {
-  --container-background-color: #ffffff;
+  --container-background-color: #fff9f1;
   --color-theme1: #f7cd6b;
   --color-theme2: #ea8d57;
   --color-theme3: #140905;
@@ -62,7 +62,7 @@ $WHITE: #ffffff;
 }
 
 :root[color-theme='theme-night'] {
-  --container-background-color: #393a3d;
+  --container-background-color: #252933;
   --color-theme1: #141a26;
   --color-theme2: #2e3d59;
   --color-theme3: #607ea6;
