--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -1,5 +1,10 @@
 $WHITE: #ffffff;
 
+$THEME_SUNRISE: #f7cd6b;
+$THEME_DAYLIGHT: #d3e9f1;
+$THEME_SUNSET: #f79e7e;
+$THEME_NIGHT: #607ea6;
+
 // opacity 10%: 0x1A
 // opacity 30%: 0x4E
 // opacity 50%: 0x82
