Design: 오늘 날짜는 그냥 볼드처리만

--- a/src/router/Calendar/OverviewCalendar/CalendarBody/calendarBody.module.scss
+++ b/src/router/Calendar/OverviewCalendar/CalendarBody/calendarBody.module.scss
@@ -47,9 +47,6 @@
   }
 
   .today {
-    padding: 5px;
-    margin: 10px 0;
-    text-align: center;
-    background-color: var(--color-middle30);
+    font-weight: 700;
   }
 }
