Design: 전체적인 글자크기 조정 (좀 더 작게)

--- a/src/components/PlayerComponent/playerComponent.module.scss
+++ b/src/components/PlayerComponent/playerComponent.module.scss
@@ -29,6 +29,7 @@
     overflow: auto;
     line-height: 20px;
     white-space: pre-wrap;
+    user-select: none;
     border: 1px solid var(--color-dark30);
     border-radius: 4px;
   }
