--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -31,6 +31,7 @@
     max-width: 40%;
     overflow: hidden;
     font-size: sizes.$FONT_SMALL;
+    line-height: 24px;
     color: var(--color-dark50);
     text-overflow: ellipsis;
     white-space: nowrap;
