Design: 시맨틱 태그 사용, 높이 조정

--- a/src/components/Layout/NavSection/navSection.module.scss
+++ b/src/components/Layout/NavSection/navSection.module.scss
@@ -4,7 +4,7 @@
 
 .layoutNavBar {
   width: 100%;
-  margin: 20px 0;
+  margin-top: 20px;
 
   & > ul {
     @include flexbox.flexbox(center, start);
