--- a/src/router/Mood/TagSelector/tagSelector.module.scss
+++ b/src/router/Mood/TagSelector/tagSelector.module.scss
@@ -1,3 +1,4 @@
+@use 'styles/constants/sizes';
 @use 'styles/mixins/flexbox';
 
 .tagSelectorWrapper {
@@ -6,6 +7,7 @@
   .tagSelectorLabel {
     margin-bottom: 8px;
     font-family: 'Nanum Myeongjo', serif;
+    font-size: sizes.$FONT_NORMAL;
     color: var(--color-dark50);
   }
 
