fix: 랜덤 선곡 관련 오류 수정 (컴포넌트 강제 새로고침)
- key prop 넣어 해결 (https://github.com/CookPete/react-player/issues/209)

--- a/src/components/Layout/layout.module.scss
+++ b/src/components/Layout/layout.module.scss
@@ -34,7 +34,11 @@
   max-width: 480px;
   height: 100%;
 
-  & > img {
+  & > button {
+    height: sizes.$LAYOUT_IMAGE_SIZE;
+  }
+
+  button > img {
     width: sizes.$LAYOUT_IMAGE_SIZE;
     height: sizes.$LAYOUT_IMAGE_SIZE;
     object-fit: cover;
