--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -72,3 +72,5 @@ $THEME_NIGHT: #607ea6;
   --color-dark30: #dae4f84e;
   --color-dark50: #dae4f882;
 }
+
+$BOX_SHADOW: 0 0 16px 1px var(--color-light);
